feat(storage): add storage analyzer
